11th commit : fixing design issues

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,14 @@
         </script>
         <title>Image Processing</title>
   <base href="/">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
   <script>
     function openSlideMenu(){
       document.getElementById('side-menu').style.width = '250px';
-      document.getElementById('main').style.marginLeft = '250px';
     }
     function closeSlideMenu(){
       document.getElementById('side-menu').style.width = '0';
